export const snapshot = {};

snapshot[`Typegraph using temporal 1`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start": 1,
          "query": 6,
          "signal": 8,
          "describe": 11
        },
        "required": [
          "start",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "func_33",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_5",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "list_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "object_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "some_field": 3
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_34",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 3,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_35",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 3,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_20",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 10,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_19",
        "runtime": 1,
        "policies": [],
        "injection": {
          "source": "static",
          "data": {
            "value": "\\\\"1234\\\\""
          }
        },
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_36",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 12,
        "output": 13,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_31",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "required": []
      },
      {
        "type": "object",
        "title": "object_30",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start_time": 14,
          "close_time": 14,
          "state": 14
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "optional_25",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "integer_24",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "<workflow_type>"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "<query_type>"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "<signal_name>"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "<name>",
          "host": "<host>"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": []
    }
  }
]'
`;

snapshot[`Typegraph using temporal 2`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start": 1,
          "query": 6,
          "signal": 8,
          "describe": 11
        },
        "required": [
          "start",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "func_7",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_5",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "list_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "object_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "some_field": 3
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_14",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 3,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_12",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_24",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 3,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_22",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 10,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_21",
        "runtime": 1,
        "policies": [],
        "injection": {
          "source": "static",
          "data": {
            "value": "\\\\"1234\\\\""
          }
        },
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_36",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 12,
        "output": 13,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_34",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "required": []
      },
      {
        "type": "object",
        "title": "object_33",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start_time": 14,
          "close_time": 14,
          "state": 14
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "optional_28",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "integer_27",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "<workflow_type>"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "<query_type>"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "<signal_name>"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "<name>",
          "host": "<host>"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": []
    }
  }
]'
`;
